# a2a-reputation

./: .gitignore  README.md  STATUS.md  agent.idl  package-lock.json  package.json  skills.md
docs/: a2a-reputation-v2.idl  assert-shim.js  deploy-readiness.md  refresh-market-data.mjs  scoring-v2-spec.md  vara-agent-markets.html  wallet-open-prediction.ts
docs/assets/: wallet-open-prediction.js
docs/data/: markets.json
fixtures/: graphql-preview-minimal.json
programs/reputation-oracle/: Cargo.toml  README.md  build.rs
programs/reputation-oracle/app/: Cargo.toml
programs/reputation-oracle/app/src/: lib.rs
programs/reputation-oracle/client/: Cargo.toml  build.rs
programs/reputation-oracle/client/src/: lib.rs  reputation_oracle_client.rs
programs/reputation-oracle/gclient-smoke/: Cargo.toml
programs/reputation-oracle/gclient-smoke/src/: main.rs
programs/reputation-oracle/src/: lib.rs
programs/reputation-oracle/tests/: gtest.rs
scripts/: export-deploy-wasm.mjs  local-smoke.mjs  preview-graphql.mjs  settle-usage-predictions.mjs  smoke-graphql-gclient.mjs  test-sails.mjs
src/: deploy-wasm.mjs  graphql-preview.mjs  local-smoke.mjs  sails-test.mjs
tests/: deploy-wasm.test.mjs  graphql-preview.test.mjs  local-smoke.test.mjs
