[package]
name = "reputation-oracle-gclient-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
gclient = "=1.10.0"
reputation-oracle-client = { path = "../client" }
sails-rs = { version = "0.10.4", features = ["gclient"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
